--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         </div>    
         <div class="buttonmenu">
             <div class="howerbutton">
-                <button><a href="campagnie 2.html"> campagnie 2 </a></button>
+                <button><a href="campagnie 2.html"> one shot </a></button>
                 <div class="contenu">
-                    <a href="#">Contexte</a>
+                    <a href="#"></a>
                     <a href="#">Personnage</a>
                     <a href="#">Historique Des Session</a>
                 </div>
