--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <div class="container">
         <div class="buttonmenu" >
             <div class="howerbutton">
-                <button><a href="campagnie 1.html"> campagnie 1 </a></button>
+                <button><a href="campagnie 1.html"> campaigns </a></button>
                 <div class="contenu">
-                    <a href="#">Contexte</a>
-                    <a href="#">Personnage</a>
-                    <a href="#">Historique Des Session</a>
+                    <a href="#">première</a>
+                    <a href="#"></a>
+                    <a href="#"></a>
                 </div>
             </div>
         </div>    
@@ -59,6 +59,7 @@
                 <div class="contenu">
                     <a href="#">Race</a>
                     <a href="#">Classe</a>
+                    <a href="#">Homebrew</a>
                 </div>
             </div>
         </div>      
